Redesign to flatten html folder structure

--- a/Legal.html
+++ b/Legal.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <title>StatblockWizard legal information</title>
-    <script type="application/javascript" src="../js/StatblockWizard.js"></script>
-    <link rel="stylesheet" href="../css/StatblockWizardMain.css" type="text/css">
-    <link rel="icon" href="../favicon.ico">
+    <script type="application/javascript" src="js/StatblockWizard.js"></script>
+    <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body class="infopage">
     <h1 class="center">
-        <img src="../res/StatblockWizard.png" width="32" height="32" class="homelink">
+        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink">
         StatblockWizard
     </h1>
     <p class="center">&copy;2023 <a href="mailto:statblockwizard@gmail.com">StatblockWizard</a></p>
