--- a/Creator.html
+++ b/Creator.html
@@ -5,16 +5,16 @@
 <head>
     <title>StatblockWizard Creator</title>
     <meta charset="UTF-8">
-    <script type="application/javascript" src="../js/StatblockWizard.js"></script>
-    <script type="application/javascript" src="../js/StatblockWizardCreator.js"></script>
-    <link rel="stylesheet" href="../css/StatblockWizardMain.css" type="text/css">
-    <link rel="stylesheet" href="../css/StatblockWizardCreator.css" type="text/css">
-    <link rel="icon" href="../favicon.ico">
+    <script type="application/javascript" src="js/StatblockWizard.js"></script>
+    <script type="application/javascript" src="js/StatblockWizardCreator.js"></script>
+    <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
+    <link rel="stylesheet" href="css/StatblockWizardCreator.css" type="text/css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
     <h1 class="center">
-        <img src="../res/StatblockWizard.png" width="32" height="32" class="homelink">
+        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink">
         StatblockWizard Creator
     </h1>
     <noscript>
