Added defaut viewport meta tag

--- a/Creator.html
+++ b/Creator.html
@@ -5,6 +5,7 @@
 <head>
     <title>StatblockWizard Creator</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
     <script type="application/javascript" src="js/StatblockWizardCreator.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
