--- a/Viewer.html
+++ b/Viewer.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>StatblockWizard Viewer</title>
 
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
