--- a/Legal.html
+++ b/Legal.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>StatblockWizard legal information</title>
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
