--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>StatblockWizard</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="refresh" content="0; StatblockWizard.html" />
         <link rel="icon" href="favicon.ico">
     </head>
