--- a/StatblockWizard.html
+++ b/StatblockWizard.html
@@ -21,6 +21,11 @@
     <p>Welcome to <span class="appname">StatblockWizard</span>, the tool that allows easy creation of nice looking
         statblocks for monsters and NPCs for the world's most popular tabletop roleplaying game.</p>
 
+    <noscript>
+        <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
+            not work now.</p>
+    </noscript>
+    
     <p>If you're new to StatblockWizard, the best way to start is to select 'View an existing Statblock', below. There
         you will see a demo statblock that tells you what actions are available.
         From there, you can continue to the Creator to start creating or editing your Statblocks.</p>
@@ -31,22 +36,12 @@
     <p class="note">Note: if you do not see the 'Statblock Wizard' demo statblock in the Viewer, you have to return here
         and use "Clear Saved Statblock" first.</p>
 
-    <p>This tool runs completely in your browser, on your device.
-        The tool is best used on desktop/laptop computers, and may not look great on small screens. Your last
-        created&mdash;or uploaded&mdash;statblock will be stored in your browser's local data storage. The data
-        will not be sent anywhere, and no other data will be stored or collected by this app, ever.</p>
-    <br>
-    <noscript>
-        <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
-            not work now.</p>
-    </noscript>
     <div id="StatblockWizardModules"></div>
-    <br>
-    <br>
+
     <hr>
     <h2 class="center">Some sample <span class="appname">StatblockWizard</span> statblocks</h2>
-    <p class="center">Select a statblock to open it in the viewer. <span class="note">(This will overwrite
-            your current statblock&mdash;please export to JSON first if you need it later!)</span></p>
+    <p class="center">Select a statblock to open it in the viewer. <span class="note">(This will replace
+            your current statblock!)</span></p>
     <div id="StatblockWizardSamples"></div>
 </body>
 
