Update styling, reorganize order of legal texts

--- a/StatblockWizard.html
+++ b/StatblockWizard.html
@@ -26,15 +26,15 @@
             not work now.</p>
     </noscript>
     
-    <p>If you're new to StatblockWizard, the best way to start is to select 'View an existing Statblock', below. There
+    <p>If you're new to StatblockWizard, the best way to start is to select 'View an existing statblock', below. There
         you will see a demo statblock that tells you what actions are available.
         From there, you can continue to the Creator to start creating or editing your Statblocks.</p>
 
     <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="favicon.ico" class="inlinefavicon"
             title="StatblockWizard logo">&nbsp;&mdash;in the top of any page&mdash;&nbsp;will bring you back here.</p>
 
-    <p class="note">Note: if you do not see the 'Statblock Wizard' demo statblock in the Viewer, you have to return here
-        and use "Clear Saved Statblock" first.</p>
+    <p class="note">Note: if you do not see the <span class="samplename">Statblock Wizard</span> demo statblock in the Viewer, you have to return here
+        and use 'Clear saved statblock' first.</p>
 
     <div id="StatblockWizardModules"></div>
 
