--- a/StatblockWizard.html
+++ b/StatblockWizard.html
@@ -19,22 +19,22 @@
         StatblockWizard
     </h1>
     <p>Welcome to <span class="appname">StatblockWizard</span>, the tool that allows easy creation of nice looking
-        statblocks for monsters and NPCs for the world's most popular tabletop roleplaying game.</p>
+        statblocks of monsters or NPCs for the world's most popular tabletop roleplaying game.</p>
 
     <noscript>
         <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
             not work now.</p>
     </noscript>
-    
-    <p>If you're new to StatblockWizard, the best way to start is to select 'View an existing statblock', below. There
-        you will see a demo statblock that tells you what actions are available.
-        From there, you can continue to the Creator to start creating or editing your Statblocks.</p>
+
+    <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View an existing
+        statblock', below. There you will see a demo statblock that shows what actions are available. You can
+        continue from there to the Creator to start creating or editing your Statblocks.</p>
 
     <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="favicon.ico" class="inlinefavicon"
             title="StatblockWizard logo">&nbsp;&mdash;in the top of any page&mdash;&nbsp;will bring you back here.</p>
 
-    <p class="note">Note: if you do not see the <span class="samplename">Statblock Wizard</span> demo statblock in the Viewer, you have to return here
-        and use 'Clear saved statblock' first.</p>
+    <p class="note">Note: if you do not see the <span class="samplename">Statblock Wizard</span> demo statblock in the
+        Viewer, you can re-enable it by using the 'Clear saved statblock' action, below.</p>
 
     <div id="StatblockWizardModules"></div>
 
