--- a/Viewer.html
+++ b/Viewer.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex">
     <title>StatblockWizard Viewer</title>
 
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
