--- a/Legal.html
+++ b/Legal.html
@@ -21,9 +21,17 @@
     <p class="center">No part of this work may be copied without written permission.</p>
 
     <p>You are free to use the statblocks you create using <span class="appname">StatblockWizard</span> in any legal way
-        you like; attribution to <span class="appname">StatblockWizard</span> is not required but is appreciated. You
-        are responsible for having the rights to use the content that you add. <span
-            class="appname">StatblockWizard</span> will not accept any liability.</p>
+        you like under the <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
+            the Coast Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
+        required but is appreciated.</p>
+    <p>If you want to use the statblocks in ways not covered by the Fan Content Policy,<br>
+        (1.) you must add attribution to the “SRD 5.1” (see below) or license your product in other ways, such as
+        through sites like dmsguild.com.<br>
+        (2.) please attribute <span class="appname">StatblockWizard</span> by adding a text similar to: <span
+            class="center">Statblocks were created using StatblockWizard (https://statblockwizard.github.io)</span></p>
+    <p>In either case, you are responsible for having the rights to publish what you added. <span
+            class="appname">StatblockWizard</span> will not accept any liability.
+    </p>
 
     <p><span class="appname">StatblockWizard</span> runs completely in your browser, on your device. It is best
         used on desktop/laptop computers, and may not entirely look great on small screens.</p>
@@ -32,10 +40,12 @@
     <p><span class="appname">StatblockWizard</span> does not guarantee that exported JSON files will be supported
         forever, but since they use a proprietary format we will certainly try...</p>
     <hr>
-    <p class="note">This work includes material taken from the System Reference Document 5.1 (“SRD 5.1”) by Wizards of the Coast LLC
-        and available at <a
+    <p class="note">This work includes material taken from the System Reference Document 5.1 (“SRD 5.1”) by Wizards of
+        the Coast LLC
+        and available at <a target="_blank"
             href="https://dnd.wizards.com/resources/systems-reference-document">https://dnd.wizards.com/resources/systems-reference-document</a>.
         The SRD 5.1 is licensed under the Creative Commons Attribution 4.0 International License available at <a
+            target="_blank"
             href="https://creativecommons.org/licenses/by/4.0/legalcode">https://creativecommons.org/licenses/by/4.0/legalcode</a>.
     </p>
 </body>
