Improved metadata for search engines

--- a/Creator.html
+++ b/Creator.html
@@ -16,8 +16,8 @@
 
 <body>
     <h1 class="center">
-        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink">
-        StatblockWizard Creator
+        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink" title="StatblockWizard logo"
+            alt="A square logo featuring the letters SW, styled as a miniature statblock.">StatblockWizard Creator
     </h1>
     <noscript>
         <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
