--- a/Legal.html
+++ b/Legal.html
@@ -14,7 +14,8 @@
 
 <body class="infopage">
     <h1 class="center">
-        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink">
+        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink" title="StatblockWizard logo"
+        alt="A square logo featuring the letters SW, styled as a miniature statblock.">
         StatblockWizard
     </h1>
     <p class="center">&copy;2023 <a href="mailto:statblockwizard@gmail.com">StatblockWizard</a></p>
@@ -22,7 +23,7 @@
 
     <p>You are free to use the statblocks you create using <span class="appname">StatblockWizard</span> in any legal way
         you like under the <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
-            the Coast Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
+            the Coast's Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
         required but is appreciated.</p>
     <p>If you want to use the statblocks in ways not covered by the Fan Content Policy,<br>
         (1.) you must add attribution to the “SRD 5.1” (see below) or license your product in other ways, such as
