--- a/Viewer.html
+++ b/Viewer.html
@@ -19,7 +19,8 @@
 
 <body>
     <h1 class="center">
-        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink">
+        <img src="res/StatblockWizard.png" width="32" height="32" class="homelink" title="StatblockWizard logo"
+        alt="A square logo featuring the letters SW, styled as a miniature statblock.">
         StatblockWizard Viewer
     </h1>
     <noscript>
@@ -27,7 +28,7 @@
             not work now.</p>
     </noscript>
     <div id="StatblockWizardViewer"></div>
-    <img id="svgimg" style="display: none;">
+    <img id="svgimg" style="display: none;" title="svgimg" alt="placeholder for svg file creation">
 </body>
 
 </html>
