Reviewed demo statblock text, home page text.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
             not work now.</p>
     </noscript>
+    <p>You enter the text, <span class="appname">StatblockWizard</span> handles the layout.</p>
 
     <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View an existing
         statblock', below. There you will see a demo statblock that shows what actions are available. You can
@@ -35,7 +36,7 @@
             title="StatblockWizard logo">&nbsp;&mdash;in the top of any page&mdash;&nbsp;will bring you back here.</p>
 
     <p class="note">Note: if you do not see the <span class="samplename">Statblock Wizard</span> demo statblock in the
-        Viewer, you can re-enable it by using the 'Clear saved statblock' action, below.</p>
+        Viewer, you can re-enable it by using the 'Clear saved statblock' action.</p>
 
     <div id="StatblockWizardModules"></div>
 
