Updated meta description and keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>StatblockWizard</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Create or view nice looking statblocks of monsters or NPC's for the 5th edition of the world's most popular tabletop roleplaying game.">
-    <meta name="keywords" content="statblock, wizard, monster, npc, 5e, 5th edition, ttrpg, roleplaying, image">
+    <meta name="description" content="Create or view nice looking statblocks of monsters or NPC's for the 5th edition of the world's most popular tabletop roleplaying game. You enter the text, StatblockWizard handles the layout.">
+    <meta name="keywords" content="statblock,create,5e,5th edition,layout,print,wizard,monster,npc,ttrpg,roleplaying,image">
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
     <script type="application/javascript" src="js/StatblockWizardMain.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
