Fixed page title layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body class="infopage">
     <h1>
         <img src="res/StatblockWizard.png" width="32" height="32" class="home" title="StatblockWizard logo"
-            alt="A square logo featuring the letters SW, styled as a miniature statblock.">StatblockWizard
+            alt="A square logo featuring the letters SW, styled as a miniature statblock.">
+            StatblockWizard
     </h1>
     <p>Welcome to <span class="appname">StatblockWizard</span>, the tool that allows easy creation of nice looking
         statblocks of monsters or NPCs for the world's most popular tabletop roleplaying game.</p>
