--- a/Legal.html
+++ b/Legal.html
@@ -22,15 +22,15 @@
     <p class="center">No part of this work may be copied without written permission.</p>
 
     <p>You are free to use the statblocks you create using <span class="appname">StatblockWizard</span> in any legal way
-        you like under the <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
+        you like under <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
             the Coast's Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
         required but is appreciated.</p>
     <p>If you want to use the statblocks in ways not covered by the Fan Content Policy,<br>
         (1.) you must add attribution to the “SRD 5.1” (see below) or license your product in other ways, such as
-        through sites like dmsguild.com.<br>
+        through dmsguild.com.<br>
         (2.) please attribute <span class="appname">StatblockWizard</span> by adding a text similar to: <span
             class="center">Statblocks were created using StatblockWizard (https://statblockwizard.github.io)</span></p>
-    <p>In either case, you are responsible for having the rights to publish what you added. <span
+    <p>In any case, you are responsible for having the rights to publish what you added. <span
             class="appname">StatblockWizard</span> will not accept any liability.
     </p>
 
