Remove font from public css file

--- a/Viewer.html
+++ b/Viewer.html
@@ -12,6 +12,7 @@
     <script type="application/javascript" src="js/StatblockWizardViewer.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
     <link rel="stylesheet" href="css/StatblockWizardViewer.css" type="text/css">
+    <link rel="stylesheet" href="css/StatblockWizardFonts.css" type="text/css">
     <link rel="stylesheet" href="css/StatblockWizard.css" type="text/css">
     <link rel="stylesheet" href="css/StatblockWizardPrint.css" type="text/css">
     <link rel="icon" href="favicon.ico">
