Added font license information, and removed alll user-visible SVG references.

--- a/Legal.html
+++ b/Legal.html
@@ -49,6 +49,7 @@
             target="_blank"
             href="https://creativecommons.org/licenses/by/4.0/legalcode">https://creativecommons.org/licenses/by/4.0/legalcode</a>.
     </p>
+    <p class="note">The fonts used in the statblock are licensed under the SIL Open Font License. All relevant information is in this file: <a target="_blank" href="./res//OFL.txt">OFL.txt</a></p>
 </body>
 
 </html>
