--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     <div id="StatblockWizardModules"></div>
 
+    <p>In the next few months, it will become possible to optionally switch to the new '2024' layout.</p>
+
     <hr>
     <h2 class="center">Some sample <span class="appname">StatblockWizard</span> statblocks</h2>
     <p class="center">Select a statblock to open it in the viewer. <span class="note">(This will replace your current
