Added the first 2024 sample layout

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="StatblockWizardModules"></div>
 
-    <p>In the next few months, it will become possible to optionally switch to the new '2024' layout.</p>
+    <p>In the next few weeks, it will become possible to optionally switch to the new '2024' layout. See the sample Cat statblock below of the '2014' cat in the new layout!</p>
 
     <hr>
     <h2 class="center">Some sample <span class="appname">StatblockWizard</span> statblocks</h2>
