Support the 2024 layout

--- a/Legal.html
+++ b/Legal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Copyright 2023 StatblockWizard -->
+<!-- Copyright 2023, 2025 StatblockWizard -->
 <html lang="en">
 
 <head>
@@ -8,6 +8,7 @@
     <meta name="robots" content="noindex">
     <title>StatblockWizard legal information</title>
     <script type="application/javascript" src="js/StatblockWizard.js"></script>
+    <script type="application/javascript" src="js/StatblockWizardTools.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
     <link rel="icon" href="favicon.ico">
 </head>
@@ -15,28 +16,25 @@
 <body class="infopage">
     <h1 class="center">
         <img src="res/StatblockWizard.png" width="32" height="32" class="homelink" title="StatblockWizard logo"
-        alt="A square logo featuring the letters SW, styled as a miniature statblock.">
+        alt="A square logo featuring the letters SW, styled as a miniature stat block.">
         StatblockWizard
     </h1>
-    <p class="center">&copy;2023 <a href="mailto:statblockwizard@gmail.com">StatblockWizard</a></p>
+    <p class="center">&copy;2023, 2025 <a href="mailto:statblockwizard@gmail.com">StatblockWizard</a></p>
     <p class="center">No part of this work may be copied without written permission.</p>
 
-    <p>You are free to use the statblocks you create using <span class="appname">StatblockWizard</span> in any legal way
+    <p>You are free to use the stat blocks you create using <span class="appname">StatblockWizard</span> in any legal way
         you like under <a target="_blank" href="https://company.wizards.com/en/legal/fancontentpolicy">Wizards of
             the Coast's Fan Content Policy</a>; attribution to <span class="appname">StatblockWizard</span> is not
         required but is appreciated.</p>
-    <p>If you want to use the statblocks in ways not covered by the Fan Content Policy,<br>
-        (1.) you must add attribution to the “SRD 5.1” (see below) or license your product in other ways, such as
-        through dmsguild.com.<br>
-        (2.) please attribute <span class="appname">StatblockWizard</span> by adding a text similar to: <span
-            class="center">Statblocks were created using StatblockWizard (https://statblockwizard.github.io)</span></p>
-    <p>In any case, you are responsible for having the rights to publish what you added. <span
+    <p>If you want to use the stat blocks in ways not covered by the Fan Content Policy, please attribute <span class="appname">StatblockWizard</span> by adding a text similar to: <span
+            class="center">Stat blocks were created using StatblockWizard (https://statblockwizard.github.io)</span></p>
+    <p>In any case, you are responsible for what you publish. <span
             class="appname">StatblockWizard</span> will not accept any liability.
     </p>
 
     <p><span class="appname">StatblockWizard</span> runs completely in your browser, on your device. It is best
         used on desktop/laptop computers, and may not entirely look great on small screens.</p>
-    <p>Your last created &mdash;or uploaded&mdash; statblock will be stored in your browser's local data storage. The
+    <p>Your last created &mdash;or uploaded&mdash; stat block will be stored in your browser's local data storage. The
         data will not be sent anywhere, and no other data will be stored or collected by this app, ever.</p>
     <p><span class="appname">StatblockWizard</span> does not guarantee that exported JSON files will be supported
         forever, but since they use a proprietary format we will certainly try...</p>
@@ -49,7 +47,7 @@
             target="_blank"
             href="https://creativecommons.org/licenses/by/4.0/legalcode">https://creativecommons.org/licenses/by/4.0/legalcode</a>.
     </p>
-    <p class="note">The fonts used in the statblock are licensed under the SIL Open Font License. All relevant information is in this file: <a target="_blank" href="./res//OFL.txt">OFL.txt</a></p>
+    <p class="note">The fonts used in the stat block are licensed under the SIL Open Font License. All relevant information is in this file: <a target="_blank" href="./res//OFL.txt">OFL.txt</a></p>
 </body>
 
 </html>
