--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- Copyright 2023 StatblockWizard -->
+<!-- Copyright 2023, 2025 StatblockWizard -->
 <html lang="en">
 
 <head>
     <title>StatblockWizard</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Create or view nice looking statblocks of monsters or NPC's for the 5th edition of the world's most popular tabletop roleplaying game. You enter the text, StatblockWizard handles the layout.">
-    <meta name="keywords" content="statblock,create,5e,5th edition,layout,print,wizard,monster,npc,ttrpg,roleplaying,image">
-    <script type="application/javascript" src="js/StatblockWizard.js"></script>
+    <meta name="description" content="Create or view nice looking stat blocks of monsters or NPC's for the world's most popular tabletop roleplaying game. You enter the text, StatblockWizard handles the layout.">
+    <meta name="keywords" content="stat block,create,5e,5th edition,2024,layout,print,wizard,monster,npc,ttrpg,roleplaying,image">
+    <script type="application/javascript" src="js/StatblockWizardTools.js"></script>
     <script type="application/javascript" src="js/StatblockWizardMain.js"></script>
     <link rel="stylesheet" href="css/StatblockWizardMain.css" type="text/css">
     <link rel="icon" href="favicon.ico">
@@ -17,11 +17,11 @@
 <body class="infopage">
     <h1>
         <img src="res/StatblockWizard.png" width="32" height="32" class="home" title="StatblockWizard logo"
-            alt="A square logo featuring the letters SW, styled as a miniature statblock.">
+            alt="A square logo featuring the letters SW, styled as a miniature stat block.">
             StatblockWizard
     </h1>
     <p>Welcome to <span class="appname">StatblockWizard</span>, the tool that allows easy creation of nice looking
-        statblocks of monsters or NPCs for the world's most popular tabletop roleplaying game.</p>
+        stat blocks of monsters or NPCs for the world's most popular tabletop roleplaying game.</p>
 
     <noscript>
         <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
@@ -30,25 +30,22 @@
     <p>You enter the text, <span class="appname">StatblockWizard</span> handles the layout.</p>
 
     <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View an existing
-        statblock', below. There you will see a demo statblock that shows what actions are available. You can continue
-        from there to the Creator to start creating or editing your Statblocks.</p>
+        stat block', below. There you will see a demo stat block that shows what actions are available. You can continue
+        from there to the Creator to start creating or editing your Stat blocks.</p>
 
     <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="favicon.ico" class="inlinefavicon"
             title="StatblockWizard logo"
-            alt="A square logo featuring the letters SW, styled as a miniature statblock.">&nbsp;&mdash;in the top of
+            alt="A square logo featuring the letters SW, styled as a miniature stat block.">&nbsp;&mdash;in the top of
         any page&mdash;&nbsp;will bring you back here.</p>
 
-    <p class="note">Note: if you do not see the <span class="samplename">Statblock Wizard</span> demo statblock in the
-        Viewer, you can re-enable it by using the 'Clear saved statblock' action.</p>
+    <div id="versionselect"></div>
 
     <div id="StatblockWizardModules"></div>
 
-    <p>In the next few months, it will become possible to optionally switch to the new '2024' layout.</p>
-
     <hr>
-    <h2 class="center">Some sample <span class="appname">StatblockWizard</span> statblocks</h2>
-    <p class="center">Select a statblock to open it in the viewer. <span class="note">(This will replace your current
-            statblock!)</span></p>
+    <h2 class="center">Some sample <span class="appname">StatblockWizard</span> stat blocks</h2>
+    <p class="center">Select a stat block to open it in the viewer. <span class="note">(This will replace your current
+            stat block!)</span></p>
     <div id="StatblockWizardSamples"></div>
 </body>
 
