--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </noscript>
     <p>You enter the text, <span class="appname">StatblockWizard</span> handles the layout.</p>
 
-    <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View an existing
+    <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View a
         stat block', below. There you will see a demo stat block that shows what actions are available. You can continue
         from there to the Creator to start creating or editing your Stat blocks.</p>
 
