--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <p>You enter the text, <span class="appname">StatblockWizard</span> handles the layout.</p>
 
     <p>The best way to start using <span class="appname">StatblockWizard</span> is to select 'View a
-        stat block', below. There you will see a demo stat block that shows what actions are available. You can continue
-        from there to the Creator to start creating or editing your Stat blocks.</p>
+        stat block', below. There, you will see a demo stat block that shows what actions are available. You can then proceed
+        to the Creator to start creating or editing your stat block.</p>
 
     <p>Clicking the <span class="appname">StatblockWizard</span> logo <img src="favicon.ico" class="inlinefavicon"
             title="StatblockWizard logo"
