Add documentation to the Creator page.

--- a/2024Creator.html
+++ b/2024Creator.html
@@ -21,6 +21,7 @@
             alt="A square logo featuring the letters SW, styled as a miniature stat block.">
             StatblockWizard Creator
     </h1>
+    <p class="center note">A document that describes all of the options available on this page can be found <a href="res/StatblockWizard-Creator-Buttons.pdf" target="_blank">here.</a></p>
     <noscript>
         <p>This app needs JavaScript to be enabled. It seems this is not the case in this browser, so sadly the app will
             not work now.</p>
