Udtated index.html title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>StatblockWizard</title>
+    <title>StatblockWizard - formats your 5e or 2024 monster stat blocks</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Create or view nice looking stat blocks of monsters or NPC's for the world's most popular tabletop roleplaying game. You enter the text, StatblockWizard handles the layout.">
